--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-dom": "18.2.0",
+    "react-native-web": "~0.19.6",
+    "@expo/webpack-config": "~19.0.1",
+    "expo-media-library": "~15.9.1",
+    "expo-image-picker": "~14.7.1",
+    "@expo/vector-icons": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
