updated the expo to 50.0.8

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/webpack-config": "~19.0.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
-    "expo": "~50.0.6",
+    "expo": "^50.0.8",
     "expo-image-picker": "~14.7.1",
     "expo-media-library": "~15.9.1",
     "expo-status-bar": "~1.11.1",
