--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "expo": "^50.0.11",
     "expo-crypto": "^12.8.1",
     "expo-image-picker": "~14.7.1",
+    "expo-jwt": "^1.7.1",
     "expo-media-library": "~15.9.1",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
+    "jsonwebtoken-promisified": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
